# kalshi/perps/klear/models/__init__.py
@@ -8,6 +8,9 @@ from kalshi.perps.klear.models.margin import (
     AssetClassSettlementEstimate,
     CreateMarginSubtraderGroupRequest,
     CreateMarginSubtraderGroupResponse,
+    EstimatePortfolioMaintenanceMarginPosition,
+    EstimatePortfolioMaintenanceMarginRequest,
+    EstimatePortfolioMaintenanceMarginResponse,
     FundingPaymentDetail,
     GetActiveMarginObligationsResponse,
     GetGuarantyFundBalanceResponse,
@@ -21,6 +24,7 @@ from kalshi.perps.klear.models.margin import (
     GetSettlementBalanceResponse,
     GetSettlementBalanceWithdrawalResponse,
     GetSettlementEstimateByAssetClassResponse,
+    GetSettlementPricesResponse,
     MaintenanceMarginDetail,
     MarginReport,
     MarginReportTypeLiteral,
@@ -43,6 +47,9 @@ __all__ = [
     "CreateMarginSubtraderGroupRequest",
     "CreateMarginSubtraderGroupResponse",
     "Error",
+    "EstimatePortfolioMaintenanceMarginPosition",
+    "EstimatePortfolioMaintenanceMarginRequest",
+    "EstimatePortfolioMaintenanceMarginResponse",
     "FundingPaymentDetail",
     "GetActiveMarginObligationsResponse",
     "GetGuarantyFundBalanceResponse",
@@ -56,6 +63,7 @@ __all__ = [
     "GetSettlementBalanceResponse",
     "GetSettlementBalanceWithdrawalResponse",
     "GetSettlementEstimateByAssetClassResponse",
+    "GetSettlementPricesResponse",
     "MaintenanceMarginDetail",
     "MarginReport",
     "MarginReportTypeLiteral",
